--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,3 +3,5 @@ spring.datasource.username=sa
 spring.datasource.password=
 spring.datasource.url=jdbc:h2:file:./springDemo;DB_CLOSE_DELAY=-1
 
+spring.security.user.name = user
+spring.security.user.password = default
