--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,3 +5,6 @@ spring.datasource.url=jdbc:h2:file:./springDemo;DB_CLOSE_DELAY=-1
 
 spring.security.user.name = user
 spring.security.user.password = default
+
+jwt.secretKey= ======================SecretWordForJwt===========================
+jwt.sessionTime=86400000
