--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,4 +7,4 @@ spring.security.user.name = user
 spring.security.user.password = default
 
 jwt.secretKey= ======================SecretWordForJwt===========================
-jwt.sessionTime=86400000
+jwt.ExpirationMs=86400000
